Fix top bar overlapping

--- a/frontend/src/layout/navigation-3000/components/TopBar.scss
+++ b/frontend/src/layout/navigation-3000/components/TopBar.scss
@@ -10,6 +10,10 @@
     white-space: nowrap;
     pointer-events: none;
 
+    .storybook-test-runner & {
+        position: relative; // Don't overlap scene content in visual tests
+    }
+
     .EditableField__display {
         text-overflow: ellipsis;
         white-space: nowrap;
